@@ -3,11 +3,14 @@ package net.sourceforge.squirrel_sql.client.globalsearch;
 import net.sourceforge.squirrel_sql.client.Main;
 import net.sourceforge.squirrel_sql.client.resources.SquirrelResources;
 import net.sourceforge.squirrel_sql.fw.gui.GUIUtils;
+import net.sourceforge.squirrel_sql.fw.gui.IntegerField;
+import net.sourceforge.squirrel_sql.fw.gui.MultipleLineLabel;
 import net.sourceforge.squirrel_sql.fw.gui.NoWrapJTextPane;
 import net.sourceforge.squirrel_sql.fw.resources.LibraryResources;
 import net.sourceforge.squirrel_sql.fw.util.StringManager;
 import net.sourceforge.squirrel_sql.fw.util.StringManagerFactory;
 
+import javax.swing.BorderFactory;
 import javax.swing.JButton;
 import javax.swing.JComboBox;
 import javax.swing.JDialog;
@@ -16,6 +19,7 @@ import javax.swing.JPanel;
 import javax.swing.JScrollPane;
 import javax.swing.JSplitPane;
 import javax.swing.JTree;
+import java.awt.Dimension;
 import java.awt.Font;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
@@ -32,8 +36,8 @@ public class GlobalSearchDlg extends JDialog
    JComboBox cboTextToSearch = new JComboBox();
    JButton btnConfig;
    JButton btnSearch;
-   JButton btnStop;
    NoWrapJTextPane txtPreview;
+   IntegerField txtAskContinueSearchTime;
 
    public GlobalSearchDlg()
    {
@@ -70,7 +74,7 @@ public class GlobalSearchDlg extends JDialog
       JPanel ret = new JPanel(new GridBagLayout());
       GridBagConstraints gbc;
 
-      gbc = new GridBagConstraints(0,0,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.HORIZONTAL, new Insets(5,5,0,0), 0,0);
+      gbc = new GridBagConstraints(0,0,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.HORIZONTAL, new Insets(5,5,0,5), 0,0);
       ret.add(createNavigationTopPanel(), gbc);
 
 
@@ -78,9 +82,33 @@ public class GlobalSearchDlg extends JDialog
       ret.add(new JScrollPane(treeSearchResultNavi), gbc);
 
 
-      gbc = new GridBagConstraints(0,2,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.NONE, new Insets(5,5,5,0), 0,0);
+      gbc = new GridBagConstraints(0,2,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.HORIZONTAL, new Insets(5,5,0,5), 0,0);
+      ret.add(createAskContinueSearchPanel(), gbc);
+
+      gbc = new GridBagConstraints(0,3,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.NONE, new Insets(5,5,5,0), 0,0);
       ret.add(btnClose, gbc);
 
+      ret.setMinimumSize(new Dimension(0,0));
+
+      return ret;
+   }
+
+   private JPanel createAskContinueSearchPanel()
+   {
+      JPanel ret = new JPanel(new GridBagLayout());
+
+      GridBagConstraints gbc;
+      gbc = new GridBagConstraints(0,0,2,1,1,1,GridBagConstraints.NORTHWEST, GridBagConstraints.HORIZONTAL, new Insets(3,3,0,3), 0,0);
+      ret.add(new MultipleLineLabel(s_stringMgr.getString("GlobalSearchDlg.show.continue.message.description")), gbc);
+
+      gbc = new GridBagConstraints(0,1,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.NONE, new Insets(3,3,3,0), 0,0);
+      txtAskContinueSearchTime = new IntegerField(5, 0);
+      ret.add(txtAskContinueSearchTime, gbc);
+
+      gbc = new GridBagConstraints(1,1,1,1,0,0,GridBagConstraints.NORTHWEST, GridBagConstraints.NONE, new Insets(3,3,3,3), 0,0);
+      ret.add(new JLabel(s_stringMgr.getString("GlobalSearchDlg.seconds")), gbc);
+
+      ret.setBorder(BorderFactory.createEtchedBorder());
       return ret;
    }
 
@@ -107,11 +135,6 @@ public class GlobalSearchDlg extends JDialog
       btnConfig = new JButton(Main.getApplication().getResourcesFw().getIcon(LibraryResources.IImageNames.CONFIGURE));
       btnConfig.setToolTipText(s_stringMgr.getString("GlobalSearchDlg.configure"));
       ret.add(GUIUtils.styleAsToolbarButton(btnConfig, false, true, new JButton("Dum").getPreferredSize().height), gbc);
-
-      gbc = new GridBagConstraints(3,1,1,0,0,0,GridBagConstraints.WEST, GridBagConstraints.NONE, new Insets(5,3,0,5), 0,0);
-      btnStop = new JButton(Main.getApplication().getResources().getIcon(SquirrelResources.IImageNames.STOP));
-      btnStop.setToolTipText(s_stringMgr.getString("GlobalSearchDlg.stop.tooltip"));
-      ret.add(GUIUtils.styleAsToolbarButton(btnStop, false, true, new JButton("Dum").getPreferredSize().height), gbc);
 
       return ret;
    }
