@@ -5,7 +5,7 @@ GlobalSearchType.startsWith=Starts with
 GlobalSearchType.endsWith=Ends with
 GlobalSearchType.regEx=Req Exp
 
-GlobalSearchDlg.title=Find in all SQL results
+GlobalSearchDlg.title=Find in all SQL results and cell data dialogs
 
 GlobalSearchDlg.close=Close
 
@@ -32,3 +32,11 @@ GlobalSearchCtrl.search.string.missing=Cannot search. Missing text to find.
 GlobalSearchCtrl.no.results=No search results found.
 
 GlobalSearchCtrl.bring.result.to.front=Bring result to front
+
+GlobalSearchDlg.show.continue.message.description=Choose a time in seconds after which searching \
+  should ask if to continue before it starts searching the next SQL result or Cell data dialog. \
+  0 means never ask.
+
+GlobalSearchDlg.seconds=seconds
+
+ContinueSearchQuestion.continue.searching=Continue searching?
